--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ update_data_vtas.py
 alerta_balanza.py
 alertas_retiros.py
 diccionario_vendedores_puros_dassa.xlsx
+alertas_arribos.py
+alertas_expo.py
